--- a/style.css
+++ b/style.css
@@ -18,4 +18,4 @@ h1 {
 .someclass { color: red; }
 
 /* Applies to the element with <... id="someid"> specified. */
-#button { color: green; }/* Empty. Add your own CSS if you like */
+#button { color: grey; }/* Empty. Add your own CSS if you like */
