--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
 selectors). */
 body {
   margin: 25px;
-  background-color: rgb(240,240,240);
+  background-color: rgb(240,0,240);
   font-family: arial, sans-serif;
   font-size: 14px;
+  color: blue;
 }
 
 /* Applies to all <h1>...</h1> elements. */
@@ -18,4 +19,4 @@ h1 {
 .someclass { color: red; }
 
 /* Applies to the element with <... id="someid"> specified. */
-#button { color: grey; }/* Empty. Add your own CSS if you like */
+#button { color: blue; }/* Empty. Add your own CSS if you like */
