--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   background-color: rgb(240,240,240);
   font-family: arial, sans-serif;
   font-size: 14px;
-  color: blue;
+  color: black;
 }
 
 /* Applies to all <h1>...</h1> elements. */
